<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item"
    android:background="?android:selectableItemBackground" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskNameTextView"
        android:text="@string/text_task"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stateTextView"
        android:text="@string/text_state"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/taskNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateTextView"
        android:text="@string/text_date"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/stateTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/removeTaskButton"
        android:background="@drawable/ic_delete_24dp"
        app:layout_constraintTop_toTopOf="@id/taskNameTextView"
        app:layout_constraintBottom_toBottomOf="@id/taskNameTextView"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskDescriptionTextView"
        android:text="@string/text_description"
        android:textSize="12sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/dateTextView"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>